[package]
name = "rex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
# antlr-rust = "0.3.0-beta"
lalrpop-util = { version = "^0.19", features = ["lexer"] }
regex = "1"
